kubernetes-yaml-files/python-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: web
spec:
  replicas: 3
  selector:
    matchLabels:
      name: python-app
  template:
    metadata:
      labels:
        name: python-app
    spec:
      containers:
      - name: python-app
        image: ziad/app:v1
        ports:
        - containerPort: 80
