kubernetes-yaml-files/loadBanlancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: web
spec:
  selector:
    name: python-app
  ports:
  - port: 80
    targetPort: 8000
  type: LoadBalancer
