kubernetes-yaml-files/nodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: web
spec:
  type: NodePort
  selector:
    name: python-app
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30002
