kubernetes-yaml-files/redis-srvc.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: web
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
